feat(text-fill): Adding inital infos for generic CV

--- a/generic/main.tex
+++ b/generic/main.tex
@@ -3,8 +3,8 @@
 % Packages:
 \usepackage[
     ignoreheadfoot, % set margins without considering header and footer
-    top=2 cm, % seperation between body and page edge from the top
-    bottom=2 cm, % seperation between body and page edge from the bottom
+    top=1 cm, % seperation between body and page edge from the top
+    bottom=1 cm, % seperation between body and page edge from the bottom
     left=2 cm, % seperation between body and page edge from the left
     right=2 cm, % seperation between body and page edge from the right
     footskip=1.0 cm, % seperation between body and footer
@@ -19,9 +19,9 @@
 \usepackage{fontawesome5} % for using icons
 \usepackage{amsmath} % for math
 \usepackage[
-    pdftitle={John Doe's CV},
-    pdfauthor={John Doe},
-    pdfcreator={LaTeX with RenderCV},
+    pdftitle={Iheb Belhadj's CV},
+    pdfauthor={Iheb Belhadj},
+    pdfcreator={Iheb Belhadj},
     colorlinks=true,
     urlcolor=primaryColor
 ]{hyperref} % for links, metadata and bookmarks
@@ -160,174 +160,169 @@
     \sbox\ANDbox{$|$}
 
     \begin{header}
-        \fontsize{25 pt}{25 pt}\selectfont John Doe
+        \fontsize{25 pt}{25 pt}\selectfont Iheb Belhadj
 
         \vspace{5 pt}
 
         \normalsize
-        \mbox{Your Location}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{mailto:youremail@yourdomain.com}{youremail@yourdomain.com}}%
+        \mbox{\hrefWithoutArrow{mailto:iheb.belhadj.dev@gmail.com}{iheb.belhadj.dev@gmail.com}}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{tel:+90-541-999-99-99}{0541 999 99 99}}%
+        \mbox{\hrefWithoutArrow{https://yourwebsite.com/}{iheb.belhadj.com}}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{https://yourwebsite.com/}{yourwebsite.com}}%
+        \mbox{\hrefWithoutArrow{https://linkedin.com/in/iheb-belhaj/}{linkedin.com/in/iheb-belhaj}}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{https://linkedin.com/in/yourusername}{linkedin.com/in/yourusername}}%
-        \kern 5.0 pt%
-        \AND%
-        \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{https://github.com/yourusername}{github.com/yourusername}}%
+        \mbox{\hrefWithoutArrow{https://github.com/IhebBelhadj}{github.com/IhebBelhadj}}%
     \end{header}
 
     \vspace{5 pt - 0.3 cm}
 
 
-    \section{Welcome to RenderCV!}
+    \section{Summary}
 
-
-
-        
-        \begin{onecolentry}
-            \href{https://rendercv.com}{RenderCV} is a LaTeX-based CV/resume version-control and maintenance app. It allows you to create a high-quality CV or resume as a PDF file from a YAML file, with \textbf{Markdown syntax support} and \textbf{complete control over the LaTeX code}.
-        \end{onecolentry}
-
-        \vspace{0.2 cm}
 
         \begin{onecolentry}
-            The boilerplate content was inspired by \href{https://github.com/dnl-blkv/mcdowell-cv}{Gayle McDowell}.
+An engineer specializing in backend systems and data pipelines. I thrive in complexity, designing scalable, resilient architectures that keep systems running smoothly and teams moving forward.
         \end{onecolentry}
 
 
     
-    \section{Quick Guide}
-
-    \begin{onecolentry}
-        \begin{highlightsforbulletentries}
-
-
-        \item Each section title is arbitrary and each section contains a list of entries.
-
-        \item There are 7 unique entry types: \textit{BulletEntry}, \textit{TextEntry}, \textit{EducationEntry}, \textit{ExperienceEntry}, \textit{NormalEntry}, \textit{PublicationEntry}, and \textit{OneLineEntry}.
-
-        \item Select a section title, pick an entry type, and start writing your section!
-
-        \item \href{https://docs.rendercv.com/user_guide/}{Here}, you can find a comprehensive user guide for RenderCV.
-
-
-        \end{highlightsforbulletentries}
-    \end{onecolentry}
-
-    \section{Education}
-
-
-
-        
-        \begin{twocolentry}{
-            Sept 2000 – May 2005
-        }
-            \textbf{University of Pennsylvania}, BS in Computer Science\end{twocolentry}
-
-        \vspace{0.10 cm}
-        \begin{onecolentry}
-            \begin{highlights}
-                \item GPA: 3.9/4.0 (\href{https://example.com}{a link to somewhere})
-                \item \textbf{Coursework:} Computer Architecture, Comparison of Learning Algorithms, Computational Theory
-            \end{highlights}
-        \end{onecolentry}
+    % \section{Quick Guide}
+    %
+    % \begin{onecolentry}
+    %     \begin{highlightsforbulletentries}
+    %
+    %
+    %     \item Each section title is arbitrary and each section contains a list of entries.
+    %
+    %     \item There are 7 unique entry types: \textit{BulletEntry}, \textit{TextEntry}, \textit{EducationEntry}, \textit{ExperienceEntry}, \textit{NormalEntry}, \textit{PublicationEntry}, and \textit{OneLineEntry}.
+    %
+    %     \item Select a section title, pick an entry type, and start writing your section!
+    %
+    %     \item \href{https://docs.rendercv.com/user_guide/}{Here}, you can find a comprehensive user guide for RenderCV.
+    %
+    %
+    %     \end{highlightsforbulletentries}
+    % \end{onecolentry}
+    %
 
 
 
-    
+
     \section{Experience}
 
 
 
         
         \begin{twocolentry}{
-            June 2005 – Aug 2007
+            Feb 2025 – Aug 2025
         }
-            \textbf{Software Engineer}, Apple -- Cupertino, CA\end{twocolentry}
+            \textbf{Software Engineering Intern}, Talan -- Tunis,TN\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Reduced time to render user buddy lists by 75\% by implementing a prediction algorithm
-                \item Integrated iChat with Spotlight Search by creating a tool to extract metadata from saved chat transcripts and provide metadata to a system-wide search database
-                \item Redesigned chat file format and implemented backward compatibility for search
-            \end{highlights}
+                \item End of masters project which is AI first analytics platform for business users to explore and analyze data with natural language 
+                \item Integrated a multi-agent system using LangGraph for natural language querying and chart creation that works with any type of data and can integrate rag systems and other inputs using MCP
+                \item A change data capture system to automatically update generated charts upon data update for real-time analytics
+
+                \item Developed an end to end data pipeline using minio, delta lake, airflow and dbt for data ingestion, transformation and storage as well as orchestrating other jobs like launching ML predictions and forecasting jobs 
+
+                \item Using Keycloak as a centralized IAM solution for both the client application as well as data access management with fine grained access control using roles and groups
+                \end{highlights}
         \end{onecolentry}
 
 
         \vspace{0.2 cm}
 
         \begin{twocolentry}{
-            June 2003 – Aug 2003
+            Dec 2024 - Feb 2025
         }
-            \textbf{Software Engineer Intern}, Microsoft -- Redmond, WA\end{twocolentry}
+            \textbf{Freelance Job}, Nexits  -- Paris, FR\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Designed a UI for the VS open file switcher (Ctrl-Tab) and extended it to tool windows
-                \item Created a service to provide gradient across VS and VS add-ins, optimizing its performance via caching
-                \item Built an app to compute the similarity of all methods in a codebase, reducing the time from $\mathcal{O}(n^2)$ to $\mathcal{O}(n \log n)$
-                \item Created a test case generation tool that creates random XML docs from XML Schema
-                \item Automated the extraction and processing of large datasets from legacy systems using SQL and Perl scripts
+                \item Architected and developed CMS solution,
+     leveraging Payload CMS and a custom-built, block-based page builder enabling nexits team to create new pages and edit content Nexits landing website with no code
+                \item 
+                  Instantaneous Preview system that dynamically build components from declarative config from the CMS using Astro.js for minimal JS on build
+                \item Dual rendering strategy with SSR for preview mode and SSG for production build
+                \item Achieved 100 performance score on Google Lighthouse 95 accessibility and 100 seo score on production landing website using this architecture 
             \end{highlights}
+
         \end{onecolentry}
 
+                \begin{twocolentry}{
+            Aug 2023 - Sep 2024
+        }
+            \textbf{Software engineer}, Nexits  -- Paris, FR\end{twocolentry}
 
+        \vspace{0.10 cm}
+        \begin{onecolentry}
+            \begin{highlights}
 
-    
-    \section{Publications}
+                \item Implemented product state historization with full audit trail, enabling edits, rollbacks, and time-travel of product data.
 
+                \item Contributed to the migration from a legacy system to a modern stack using Next.js, tRPC, and a monorepo architecture with Turborepo.
 
+                \item Contributed in the deployment and management of monorepo services on AWS as well as CI/CD pipelines using GitHub Actions.
+                \end{highlights}
 
-        
-        \begin{samepage}
-            \begin{twocolentry}{
-                Jan 2004
-            }
-                \textbf{3D Finite Element Analysis of No-Insulation Coils}
-            \end{twocolentry}
-
-            \vspace{0.10 cm}
-            
-            \begin{onecolentry}
-                \mbox{Frodo Baggins}, \mbox{\textbf{\textit{John Doe}}}, \mbox{Samwise Gamgee}
-
-                \vspace{0.10 cm}
-                
-        \href{https://doi.org/10.1109/TASC.2023.3340648}{10.1109/TASC.2023.3340648}
         \end{onecolentry}
-        \end{samepage}
 
+                        \begin{twocolentry}{
+            Aug 2023 - Sep 2024
+        }
+            \textbf{web dev intern}, Nexits  -- Paris, FR\end{twocolentry}
+
+        \vspace{0.10 cm}
+        \begin{onecolentry}
+            \begin{highlights}
+
+                \item Worked on a dashboard feature to extract and visualize data using chart js and integrating the feature in the client interface
+                \item Implemented data export functionality to csv or xlsx formats with the formatting and structure of choice
+
+                \end{highlights}
+
+        \end{onecolentry}
 
     
     \section{Projects}
 
 
+                \begin{twocolentry}{
+            \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
+        }
+            \textbf{Dev env portfolio}\end{twocolentry}
+
+        \vspace{0.10 cm}
+        \begin{onecolentry}
+            \begin{highlights}
+            \item My portfolio website built with Next.js , showcasing my projects and experiences in a dev environment looking UI  
+            \item Responsive design, as well as 100 performance score on Google Lighthouse, 93 accessibility and 100 seo score
+               \end{highlights}
+        \end{onecolentry}
 
         
         \begin{twocolentry}{
             \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
         }
-            \textbf{Multi-User Drawing Tool}\end{twocolentry}
+            \textbf{OpsForge}\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Developed an electronic classroom where multiple users can simultaneously view and draw on a "chalkboard" with each person's edits synchronized
-                \item Tools Used: C++, MFC
+               \item A running ops management system on a vagrant VM containing up and running tools for monitoring, log management and a Jenkins server for CI/CD operations listening to GitHub webhooks to trigger jobs on new commits
+
             \end{highlights}
         \end{onecolentry}
 
@@ -337,33 +332,17 @@
         \begin{twocolentry}{
             \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
         }
-            \textbf{Synchronized Desktop Calendar}\end{twocolentry}
+            \textbf{Playpex}\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Developed a desktop calendar with globally shared and synchronized calendars, allowing users to schedule meetings with other users
-                \item Tools Used: C\#, .NET, SQL, XML
-            \end{highlights}
+            \item Built a streaming torrent client on running in a node js runtime with a wrapper backend that utilizes media source extensions API to stream any torrent in a web player
+            \item Developed a TV like user interface in Angular, optimized for remote and keyboard navigation for a living-room experience.
+            \item bundling the torrent streamer and other backend services with the client application using electron 
+            \item Created a companion mobile controller app with Ionic, communicating over WebSockets for remote playback control.
+                \end{highlights}
         \end{onecolentry}
-
-
-        \vspace{0.2 cm}
-
-        \begin{twocolentry}{
-            2002
-        }
-            \textbf{Custom Operating System}\end{twocolentry}
-
-        \vspace{0.10 cm}
-        \begin{onecolentry}
-            \begin{highlights}
-                \item Built a UNIX-style OS with a scheduler, file system, text editor, and calculator
-                \item Tools Used: C
-            \end{highlights}
-        \end{onecolentry}
-
-
 
     
     \section{Technologies}
@@ -372,14 +351,78 @@
 
         
         \begin{onecolentry}
-            \textbf{Languages:} C++, C, Java, Objective-C, C\#, SQL, JavaScript
+            \textbf{Languages:} JavaScript, Typescript, Python, C\#, C, SQL, Java, PHP, Bash
         \end{onecolentry}
 
         \vspace{0.2 cm}
 
         \begin{onecolentry}
-            \textbf{Technologies:} .NET, Microsoft SQL Server, XCode, Interface Builder
+            \textbf{Backend dev} Spring, .NET, Express.js, Django, Flask, FastAPI
         \end{onecolentry}
+
+                \vspace{0.2 cm}
+
+
+                \begin{onecolentry}
+            \textbf{Frontend dev} React, Next.js, Astro.js, Angular, Vue.js
+        \end{onecolentry}
+
+
+        \vspace{0.2 cm}
+
+        \begin{onecolentry}
+          \textbf{Databases:} MySQL, PostgreSQL, MongoDB, Redis, DuckDB, MinIO, RDS, S3
+        \end{onecolentry}
+
+        \vspace{0.2 cm}
+
+        \begin{onecolentry}
+          \textbf{Data eng: }  Airflow, Airbyte, dbt, Kafka, Spark
+        \end{onecolentry}
+
+        \vspace{0.2 cm}
+
+                \begin{onecolentry}
+          \textbf{Agentic AI:} LangChain, LangGraph, CrewAI, AutoGen
+        \end{onecolentry}
+
+        \vspace{0.2 cm}
+
+
+        \begin{onecolentry}
+          \textbf{Cloud:} AWS (EC2, S3, RDS, Lambda), GCP (Compute Engine, Cloud Storage, Cloud SQL)
+        \end{onecolentry}
+
+                \vspace{0.2 cm}
+
+
+        \begin{onecolentry}
+          \textbf{Infrastructure \& DevOps:} Docker, Kubernetes, Terraform, Ansible, Vagrant, Jenkins, GitHub Actions
+        \end{onecolentry}
+
+
+
+
+
+
+            \section{Education}
+
+
+
+        
+        \begin{twocolentry}{
+            Sept 2022 – Sep 2025
+        }
+            \textbf{Masters in software engineering}, ESPRIT
+        \end{twocolentry}
+
+        \vspace{0.10 cm}
+
+                \begin{twocolentry}{
+            Sept 2020 – Juin 2022
+        }
+            \textbf{Bachelor in applied math and physics}, IPEIM
+          \end{twocolentry}
 
 
     
